--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 PORT=4000
-MONGO_URI=mongodb://localhost:27017/aquasip
-JWT_SECRET=your_jwt_secret
+MONGO_URI=mongosh "mongodb+srv://aquasip.klrc6am.mongodb.net/" --apiVersion 1 --username ientreprenaur
+JWT_SECRET=nahdnan1jn31jnj
