--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 PORT=4000
 MONGO_URI=mongosh "mongodb+srv://aquasip.klrc6am.mongodb.net/" --apiVersion 1 --username ientreprenaur
 JWT_SECRET=nahdnan1jn31jnj
+VITE_API_BASE=https://aquasip-backend-production.up.railway.app/api/v1
